--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -15,11 +16,21 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^8.45.0",
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "globals": "^13.20.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "micromatch": "^4.0.5",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
   }
